test/statements/select/noWhen.good
noWhen.chpl:2: error: Select has no when clauses
