test/statements/select/noWhen.chpl
config const n = 10;
select n {
}
